[package]
name = "atomic_sync"
version = "0.2.0"
edition = "2024"

authors = ["lino <lino_snsalias@outlook.com>"]
description = "Atomic-based synchronization implementing traits in `abs_sync`"
repository = "https://github.com/ljsnogard/atomic_sync"
keywords = ["sync", "spinlock", "mutex", "rwlock"]
categories = ["no-std"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
abs_sync = { version = "0.2.0" }
atomex = { version = "0.1.1" }

pin-utils = { version = "*" }

[dev-dependencies]
futures-lite = { version = "2" }
env_logger = { version = "0.11.*" }
log = { version = "0.4.*" }