[package]
name = "atomic_sync"
version = "0.3.0"
edition = "2024"

authors = ["lino <lino_snsalias@outlook.com>"]
description = "Atomic-based synchronization implementing traits in `abs_sync`"
repository = "https://github.com/ljsnogard/atomic_sync"
keywords = ["sync", "spinlock", "mutex", "rwlock"]
categories = ["no-std"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
abs_sync = { git = "https://github.com/ljsnogard/abs_sync.git", branch = "dev/0.3.0" }
atomex = { version = "0.1.1" }

[dev-dependencies]
rand = { version = "0.9" }
futures-lite = { version = "2" }
env_logger = { version = "0.11.*" }
log = { version = "0.4.*" }